...
        <item quantity="one">Practice %1$d unresolved mistake</item>
        <item quantity="other">Practice %1$d unresolved mistakes</item>
    </plurals>
    <string name="practice_shortcut_subtopic_mistakes">Practice unresolved mistakes in this subtopic</string>
    <string name="assessment_taking_question_progress">Question %1$d of %2$d</string>
    <string name="assessment_taking_select_one">Select one answer</string>
    <string name="assessment_taking_select_all">Select all that apply</string>
    <string name="assessment_taking_submit">Submit</string>
    <string name="assessment_taking_submitting">Submitting</string>
    <string name="assessment_taking_next_question">Next question</string>
    <string name="assessment_taking_loading">Preparing questions</string>
    <string name="assessment_taking_answer_save_error">Answer could not be saved. Try again.</string>
    <string name="assessment_taking_start_error">Practice could not be started.</string>
    <string name="assessment_taking_unavailable">This assessment is not available with the current learning-content settings.</string>
    <string name="assessment_taking_ready">All questions answered. Ready to finish.</string>
    <string name="assessment_taking_finish">Finish and view results</string>
    <string name="assessment_taking_finishing">Finishing</string>
    <string name="assessment_taking_completion_save_error">Results could not be saved. Try again.</string>
    <string name="assessment_taking_results_opening">Opening results</string>
    <string name="focused_result_title">Results</string>
    <string name="focused_result_loading">Loading results</string>
...
